# Email-Agent

./: pyproject.toml  test_binding.py  test_mcp_connection.py
app/: main.py
app/agents/: decision_agent.py  prompts.py  reasoning_agent.py  schema_agent.py  schemas.py
app/api/: ai_service_tool.py
app/execution/: demo.py
app/graph/: dag.py  nodes.py  routing.py  state.py
app/mcp/: __init__.py  client.py  config.py
app/policy/: compiler.py  exceptions.py  loader.py  mcp_bindings.py  models.py  summarizer.py
app/validator/: exceptions.py  result.py  rules.py  validator.py
mcp_servers/gmail_mcp_server/: auth.py  gmail_client.py  server.py
policies/founder_inbox/: actions.yaml  categories.yaml  decisions.yaml  policy.yaml  risk_rules.yaml
